V6.0.5
* Use org.Bukkit.SendTitle instead of using TitleManager and TitleAPI. 
* Use player.spawnParticle instead of using ProtocolLib 
* Fixed Ticked 432. ${prize} not working when creating a bount on a player.
* Fixed ticket 437. Stacked heads sold with BagOfGOld sign was counted as one head.
V6.0.4
* Support for SpigotMC 1.13.1 added
* "MobHunting Reward" Lore added to MobHunting Rewards
* Fixed SQL error in MySQL/ mh_Bounties (Removed CONTRAINT's)
* Fixed Ticket 409 (https://github.com/Rocologo/MobHunting/issues/409)
* new bounties is broadcasted to all online players
V6.0.3
* Removed hard dependency for WorldEdit
* Added possibility to disable integration to WorldEdit in config.yml
* Temporary fix for players being disconneted if grinding is detected. ProtocolLib was using to mark the area / circle with small flames, but this does not work at the moment. The feature is disabled in config.yml. (protocollib.show_grinding_area_using_protocollib_temp: false)  
V6.0.2
* Default message_type values added. You can now decide where the "kill message","Money message" and "Head message" will be displayed. Possible Values are: Chat, ActionBar, BassBar, Title, Subtitle or None. None if you dont want any message.
* Fix bug: Trident detected as fists - Ticket 420 (https://github.com/Rocologo/MobHunting/issues/420) 
* Fixed ticket 421 error when ProtocolLib is not installed. (https://github.com/Rocologo/MobHunting/issues/421)
V6.0.1
* For Bounty users - fixed SQL bug (https://github.com/Rocologo/MobHunting/issues/412)
* Removed a "null" message when clicking a non MobHunting head on a MC 1.13 server
* Added support for WorldGuard 7.0.0
* Added support for WorldEdit 7.0.0 
* Custom WorldGuard flag MobHunting - tested and fixed. 
* Support for Disguises fixed.
V6.0.0 Minecraft 1.13 release
* This version is only for MC 1.13
* Dolphin, Drowned, Phantom, Turtle and Fish (as a Mob) added with rewards and Mob heads to be dropped