@@ -16,7 +16,6 @@ import org.bukkit.World;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockFace;
 import org.bukkit.block.BlockState;
-import org.bukkit.block.data.BlockData;
 import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.configuration.InvalidConfigurationException;
 import org.bukkit.material.Sign;
@@ -60,7 +59,6 @@ public class WorldLeaderboard implements IDataCallback<List<StatStore>> {
 
 		mLocation = location;
 		mFacing = facing;
-		plugin.getMessages().debug("Contructor: Face=%s, mFacing=%s", facing,mFacing);
 		mWidth = width;
 		mHeight = height;
 
@@ -152,19 +150,12 @@ public class WorldLeaderboard implements IDataCallback<List<StatStore>> {
 
 	public void placeSigns(BlockFace face) {
 		for (Block block : getSignBlocks()) {
-			Sign sign = new Sign(Material.WALL_SIGN);
-			sign.setFacingDirection(face);
-			
 			block.setType(Material.WALL_SIGN);
 			BlockState state = block.getState();
+			Sign sign = (Sign) state.getData();
+			sign.setFacingDirection(face);
 			state.setData(sign);
-			state.update(true);
-			org.bukkit.block.Sign s = (org.bukkit.block.Sign) state;
-			block = s.getBlock();
-			//block.setType(Material.WALL_SIGN);
-			//block.getState().setType(Material.WALL_SIGN);
-			//block.getState().setData(sign);
-			//block.getState().update();
+			state.update(true,false);
 		}
 	}
 
@@ -195,8 +186,6 @@ public class WorldLeaderboard implements IDataCallback<List<StatStore>> {
 			it = Collections.emptyIterator();
 		else
 			it = mData.iterator();
-
-		plugin.getMessages().debug("Block mFacing=", mFacing);
 
 		// Update the label sign
 		Block signBlock = mLocation.getBlock();
@@ -487,18 +476,9 @@ public class WorldLeaderboard implements IDataCallback<List<StatStore>> {
 
 		Vector pos = section.getVector("position");
 
-		String fac = section.getString("facing");
-		plugin.getMessages().debug("fac=%s", fac);
-		// mFacing = BlockFace.valueOf(fac);
-		if (fac.equalsIgnoreCase("NORTH"))
-			mFacing = BlockFace.NORTH;
-		else if (fac.equalsIgnoreCase("SOUTH"))
-			mFacing = BlockFace.SOUTH;
-		else if (fac.equalsIgnoreCase("WEST"))
-			mFacing = BlockFace.WEST;
-		else
-			mFacing = BlockFace.EAST;
-
+		String face = section.getString("facing");
+		mFacing = BlockFace.valueOf(face);
+		
 		mHorizontal = section.getBoolean("horizontal");
 		List<String> periods = section.getStringList("periods");
 		List<String> stats = section.getStringList("stats");
